# my-first-rust-project

./: Cargo.toml  README.md  hello.txt
src/: main.rs
